<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rgTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2f0f0"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <RadioButton
                android:id="@+id/rb_tab1"
                style="@style/mainTab"
                android:checked="true"
                android:drawableTop="@drawable/tab_chat"
                android:text="@string/mainTab1"
                android:textColor="@color/tab_textview"/>

            <RadioButton
                android:id="@+id/rb_tab2"
                style="@style/mainTab"
                android:drawableTop="@drawable/tab_contacts"
                android:text="@string/mainTab2"
                android:textColor="@color/tab_textview"/>

            <RadioButton
                android:id="@+id/rb_tab3"
                style="@style/mainTab"
                android:drawableTop="@drawable/tab_friends"
                android:text="@string/mainTab3"
                />

            <RadioButton
                android:id="@+id/rb_tab4"
                style="@style/mainTab"
                android:drawableTop="@drawable/tab_setting"
                android:text="@string/mainTab4"
                />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                style="@style/RelativeLayout_red_dot">

                <TextView
                    android:id="@+id/red_dot1"
                    style="@style/red_dot"
                    android:text=""/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/RelativeLayout_red_dot">

                <TextView
                    android:id="@+id/red_dot2"
                    style="@style/red_dot"
                    android:text=""/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/RelativeLayout_red_dot">

                <TextView
                    android:id="@+id/red_dot3"
                    style="@style/red_dot"
                    android:text=""/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/RelativeLayout_red_dot">

                <TextView
                    android:id="@+id/red_dot4"
                    style="@style/red_dot"
                    android:text=""/>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>