<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_channel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/back"
    tools:context="com.cdlixin.coc.ui.news.activity.ChannelManagerActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/itemPadding12_dp"
        android:paddingRight="@dimen/itemPadding12_dp"
        android:paddingTop="33dp">
        <!--返回按钮-->
        <ImageView
            android:id="@+id/btn_back"
            android:layout_margin="4dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="12dp"
            android:src="@drawable/cancel_channel"
            android:layout_alignParentRight="true"/>
        <ScrollView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_back">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--排头的-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_channel"
                        android:text="@string/MyChannel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#232323"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/text_16_sp"/>
                    <TextView
                        android:text="@string/Click_on_the_add_and_delete_channel_and_the_long_drag_and_drop_sort"
                        android:id="@+id/tv_hint_activity_channel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_channel"
                        android:layout_marginLeft="12dp"
                        android:textSize="11sp"
                        android:visibility="visible"
                        android:layout_weight="1"
                        android:textColor="#5c5c5c"/>

                </RelativeLayout>
                <com.cdlixin.coc.ui.news.widget.DragGrid
                    android:id="@+id/grid_MyChannel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:horizontalSpacing="13dp"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:scrollbars="vertical"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp">
                </com.cdlixin.coc.ui.news.widget.DragGrid>
                <TextView
                    android:text="@string/The_recommended_channel"
                    android:layout_marginTop="25dp"
                    android:textColor="#232323"
                    android:textSize="@dimen/text_16_sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.cdlixin.coc.ui.news.widget.OtherGridView
                    android:layout_marginTop="25dp"
                    android:id="@+id/grid_otherChannel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:horizontalSpacing="13dp"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:scrollbars="vertical"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp">
                </com.cdlixin.coc.ui.news.widget.OtherGridView>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</RelativeLayout>
